// Code generated by ExtendedBatchMigrator. DO NOT EDIT.
// Batch: BASIC_OTHER
// Generated: 2026-02-12 20:33:32

syntax = "proto3";

package dnf.v1;

option java_multiple_files = true;
option java_outer_classname = "BASIC_OTHERProto";
option java_package = "com.dnfm.mina.protobuf.basic_other";


message AuthInfoMessage {
}

message AchievementbonusMessage {
}

message AchievementbonuspacketdataMessage {
}

message AchievementbonuspacketdatalistMessage {
}

message AchievementcheckMessage {
}

message AchievementinfoMessage {
}

message AchievementinfopacketdataMessage {
}

message ActorMessage {
}

message BaseChatMessage {
}

message CharacterInfoMessage {
}

message ChatBaseMessage {
}

message CheckAuthMessage {
}

message ContentsListMessage {
}

message ContentStreamMessage {
}

message DefItemConsumableMessage {
}

message DragonroadBuffMessage {
}

message DragonroadClearTileMessage {
}

message DungeonPlayerMessage {
}

message EmptyFrameMessage {
}

message EnterRoomMessage {
}

message EnterTownChatMessage {
}

message ErrorAuctionBuyMessage {
}

message ErrorAuctionRegistMessage {
}

message ExitMessage {
}

message ExitCharacterMessage {
}

message FrameMessage {
}

message FrameDataMessage {
}

message GetSessionMessage {
}

message HeartbeatMessage {
}

message IdipNoticeInfoMessage {
}

message InputReqMessage {
}

message JobInfoMessage {
}

message KickedByServerMessage {
}

message LeaveChatMessage {
}

message LoginMessage {
}

message LogoutMessage {
}

message MoveSectorMessage {
}

message NodeKickMessage {
}

message AdventurebookAchievementConditionMessage {
}

message AttackSquadStartRaidMessage {
}
